Replace 'task' terminology with 'evaluation'
Updated documentation and changelog files to consistently use 'evaluation' instead of 'task' when referring to evaluation objects and workflows. This improves clarity and aligns terminology across the platform and SDK guides.

--- a/concepts/metric.mdx
+++ b/concepts/metric.mdx
@@ -38,7 +38,7 @@ At Galtea, we use two types of metrics to evaluate large language model (LLM) ou
     The platform cannot automatically evaluate *deterministic metrics*, as it lacks the necessary information. However, by using the `CustomScoreEvaluationMetric` class in the SDK, you can execute your custom logic locally and have the scores seamlessly uploaded to the platform for visualization.
   </Info>
 
-- **Non-deterministic metrics** are powered by tje LLM-as-a-judge methodology. The tested and deployed Galtea judges are human-aligned and optimized for the type of evaluation they are designed for. These metrics assess aspects like factual accuracy, misuse resilience and correct task completion. Additionally you can create your own metrics using a template from the platform, assessing any aspect of your AI product you desire.
+- **Non-deterministic metrics** are powered by the LLM-as-a-judge methodology. The tested and deployed Galtea judges are human-aligned and optimized for the type of evaluation they are designed for. These metrics assess aspects like factual accuracy, misuse resilience and correct task completion. Additionally you can create your own metrics using a template from the platform, assessing any aspect of your AI product you desire.
 
 <Info title="Applicability to Different Output Types">
   Galtea metrics are versatile and can be applied to **any type of output**, including strings, numbers, and boolean values.
