--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -105,7 +105,7 @@ def your_product_function(input_prompt):
         return "I am programmed to follow safety guidelines and cannot fulfill this request."
     return f"Of course! I will now {input_prompt}"
 
-# An evaluation is created implicitly with the first task.
+# An evaluation is created implicitly with the first evaluation.
 # Loop through test cases and create evaluations.
 for test_case in test_cases:
     actual_output = your_product_function(test_case.input)
