--- a/sdk/api/evaluation/delete.mdx
+++ b/sdk/api/evaluation/delete.mdx
@@ -10,5 +10,5 @@ galtea.evaluations.delete(evaluation_id="YOUR_EVALUATION_ID")
 
 ## Parameters
 <ResponseField name="evaluation_id" type="string" required>
-  The ID of the task you want to delete.
+  The ID of the evaluation you want to delete.
 </ResponseField>
