--- a/snippets/changelog/2025-06-16.mdx
+++ b/snippets/changelog/2025-06-16.mdx
@@ -46,7 +46,7 @@ The new Galtea SDK v2 is here! It includes breaking changes to simplify workflow
   [Test cases](/concepts/product/test/case) are now distributed more intelligently across your documents for better coverage based on the number of questions you choose to generate.
 
 - **Single Threat per Red Teaming Test:**  
-  Red Teaming Tests now only allow a single threat type per test, ensuring clearer results.
+  Red Teaming Tests now only allow a single threat per test, ensuring clearer results.
 
 Enjoy the upgrade!
 </Update>
