--- a/snippets/changelog/2025-08-11.mdx
+++ b/snippets/changelog/2025-08-11.mdx
@@ -3,13 +3,13 @@
 
 You can now create and edit **TestCase Scenarios** directly through the Dashboard interface. This streamlined workflow allows you to define complex multi-turn conversation scenarios without leaving the platform, making it easier to set up comprehensive testing workflows for your conversational AI systems.
 
-## Enhanced TestCase Dashboard with Type-Specific Columns
+## Enhanced TestCase Dashboard with Test-Specific Columns
 
-We've improved the TestCase Dashboard with smarter table displays that now only show columns relevant to each specific test type. This reduces visual clutter and makes it easier to focus on the information that matters most for your particular testing scenario, whether you're working with single-turn evaluations, conversation scenarios, or other test types.
+We've improved the TestCase Dashboard with smarter table displays that now only show columns relevant to each specific test. This reduces visual clutter and makes it easier to focus on the information that matters most for your particular testing scenario, whether you're working with single-turn evaluations, conversation scenarios, or other tests.
 
-## New Judge Template Selector for Judge-Type Metrics
+## New Judge Template Selector for Judge Metrics
 
-When creating metrics of Judge type, you can now select from pre-built judge templates to accelerate your metric setup process. This feature provides a starting point for common evaluation patterns while still allowing full customization of your evaluation prompts and scoring logic.
+When creating Judge metrics, you can now select from pre-built judge templates to accelerate your metric setup process. This feature provides a starting point for common evaluation patterns while still allowing full customization of your evaluation prompts and scoring logic.
 
 ## Infrastructure Improvements for Event Resilience
 
