--- a/snippets/changelog/2025-09-15.mdx
+++ b/snippets/changelog/2025-09-15.mdx
@@ -5,7 +5,7 @@ We're introducing confidence scores for all generated [Test Cases](/concepts/pro
 
 ## Simplified and More Flexible Metric Creation
 
-Creating [Metrics](/concepts/metric) is now more intuitive and flexible. Metrics are now directly linked to a specific `test_type` (`QUALITY`, `RED_TEAMING`, or `SCENARIOS`), which simplifies the creation process by tailoring the available parameters to the relevant test category. This change makes it easier to define metrics that are perfectly aligned with your evaluation goals. See the updated [creation guide](/sdk/api/metrics/create) for more details.
+Creating [Metrics](/concepts/metric) is now more intuitive and flexible. Metrics are now directly linked to a specific test category (`QUALITY`, `RED_TEAMING`, or `SCENARIOS`), which simplifies the creation process by tailoring the available parameters to the relevant test category. This change makes it easier to define metrics that are perfectly aligned with your evaluation goals. See the updated [creation guide](/sdk/api/metrics/create) for more details.
 
 ## Custom Judges for Conversational Evaluation
 
