Deterministic metric type instead of Classic

--- a/concepts/metric-type/iou.mdx
+++ b/concepts/metric-type/iou.mdx
@@ -4,7 +4,7 @@ description: "Measures the spatial overlap between a predicted bounding box and 
 
 ---
 
-The IOU (Intersection Over Union) metric is part of the [Classic Metric Type](/concepts/metric-type) options in Galtea. It evaluates the degree of spatial overlap between a single predicted bounding box and a set of ground truth boxes. This is especially useful for tasks involving layout analysis, bounding box prediction, or image-based text extraction, where location matters as much as content.
+The IOU (Intersection Over Union) metric is part of the [Deterministic Metric Type](/concepts/metric-type) options in Galtea. It evaluates the degree of spatial overlap between a single predicted bounding box and a set of ground truth boxes. This is especially useful for tasks involving layout analysis, bounding box prediction, or image-based text extraction, where location matters as much as content.
 
 ---
 
