--- a/concepts/metric-type/rouge.mdx
+++ b/concepts/metric-type/rouge.mdx
@@ -2,7 +2,7 @@
 title: "ROUGE"
 description: "Evaluates automatic summarization by measuring the longest common subsequence (LCS) that preserves the word order between candidate and reference summaries." 
 ---
-The ROUGE (Recall-Oriented Understudy for Gisting Evaluation) metric is one of the [Classic Metric Type](/concepts/metric-type) Galtea exposes to evaluate how well a generated summary captures the content of a reference summary. It is primarily used for summarization tasks and other scenarios where recall is more important than exact lexical match.
+The ROUGE (Recall-Oriented Understudy for Gisting Evaluation) metric is one of the [Deterministic Metric Type](/concepts/metric-type) Galtea exposes to evaluate how well a generated summary captures the content of a reference summary. It is primarily used for summarization tasks and other scenarios where recall is more important than exact lexical match.
 
 ---
 ## Evaluation Parameters
