--- a/concepts/metric-type/text-match.mdx
+++ b/concepts/metric-type/text-match.mdx
@@ -3,7 +3,7 @@ title: "Text Match"
 description: "Determines whether the generated text matches the reference with high character-level similarity using fuzzy matching given by the [Text Similarity](/concepts/metric-type/text-similarity) metric. Returns a binary outcome based on a threshold, making it ideal for simple pass/fail evaluations where exact wording is not required."
 ---
 
-The Text Match metric is part of the [Classic Metric Type](/concepts/metric-type) options in Galtea. It leverages character-level fuzzy string comparison to assess whether two texts are similar enough, based on a predefined threshold. Rather than producing a continuous similarity score, this metric returns a boolean-style score, which is useful for scenarios where a definitive match decision is needed despite minor wording differences.
+The Text Match metric is part of the [Deterministic Metric Type](/concepts/metric-type) options in Galtea. It leverages character-level fuzzy string comparison to assess whether two texts are similar enough, based on a predefined threshold. Rather than producing a continuous similarity score, this metric returns a boolean-style score, which is useful for scenarios where a definitive match decision is needed despite minor wording differences.
 
 ---
 
