--- a/concepts/metric-type/bleu.mdx
+++ b/concepts/metric-type/bleu.mdx
@@ -2,7 +2,7 @@
 title: "BLEU"
 description: "Primarily used for machine translation evaluation, measuring how many n-grams (phrases of n words) in the candidate translation overlap with those in a set of reference translations."
 ---
-The BLEU (bilingual evaluation understudy) metric is one of the [Classic Metric Type](/concepts/metric-type) Galtea exposes to objectively compare a model’s output against ground‑truth references. It is most appropriate when you expect the model to reproduce wording very close to the reference (e.g., machine translation or tightly constrained generation).
+The BLEU (bilingual evaluation understudy) metric is one of the [Deterministic Metric Type](/concepts/metric-type) Galtea exposes to objectively compare a model’s output against ground‑truth references. It is most appropriate when you expect the model to reproduce wording very close to the reference (e.g., machine translation or tightly constrained generation).
 
 ---
 ## Evaluation Parameters
