Add 2025-09-29 changelog entry and new features
Introduced a new changelog for 2025-09-29, detailing the ability to generate user scenarios from quality test cases, a new URL Validation metric, major platform performance improvements, and minor visual fixes. Updated changelog.mdx to include the new entry and revised changelog_prompt.md to reflect the latest changes and upcoming features.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -22,7 +22,9 @@ import Changelog_2025_09_01 from "/snippets/changelog/2025-09-01.mdx";
 import Changelog_2025_09_08 from "/snippets/changelog/2025-09-08.mdx";
 import Changelog_2025_09_15 from "/snippets/changelog/2025-09-15.mdx";
 import Changelog_2025_09_22 from "/snippets/changelog/2025-09-22.mdx";
+import Changelog_2025_09_29 from "/snippets/changelog/2025-09-29.mdx";
 
+<Changelog_2025_09_29 />
 <Changelog_2025_09_22 />
 <Changelog_2025_09_15 />
 <Changelog_2025_09_08 />
