--- a/sdk/api/metrics/list.mdx
+++ b/sdk/api/metrics/list.mdx
@@ -12,6 +12,9 @@ metrics = galtea.metrics.list()
 ```
 
 ## Parameters
+<ResponseField name="sortByCreatedAt" type="string" optional>
+  Sort metrics by creation date. Valid values are "asc" and "desc".
+</ResponseField>
 <ResponseField name="offset" type="int">
   The number of metrics to skip before starting to collect the result set.
 </ResponseField>
