--- a/sdk/api/test/list.mdx
+++ b/sdk/api/test/list.mdx
@@ -12,8 +12,11 @@ tests = galtea.tests.list(product_id="YOUR_PRODUCT_ID")
 ```
 
 ## Parameters
-<ResponseField name="product_id" type="string" required>
-  The ID of the product for which you want to list tests.
+<ResponseField name="product_id" type="string | list[string]" required>
+  The ID or IDs of the product(s) for which you want to list tests.
+</ResponseField>
+<ResponseField name="sortByCreatedAt" type="string" optional>
+  Sort tests by creation date. Valid values are "asc" and "desc".
 </ResponseField>
 <ResponseField name="offset" type="int">
   The number of tests to skip before starting to collect the result set.
