Add migration guide for SDK v3.0 and doc updates
Introduces migration-to-v3.mdx with detailed instructions for upgrading to Galtea SDK v3.0, including new workflows and terminology. Updates changelog to reference the migration guide, adds documentation for 'User Score' and 'User Score Reason' fields in test cases, clarifies agent_goes_first behavior in simulator API, and revises example test strategies in test creation docs.

--- a/concepts/product/test/case.mdx
+++ b/concepts/product/test/case.mdx
@@ -59,6 +59,14 @@ The Galtea SDK allows you to create, view, and manage test cases programmaticall
   Indicates if a test case has been manually reviewed and approved by a user. This is useful for tracking which test cases are considered reliable and validated. The system stores the ID of the user who reviewed the test case, upon creation or update, the one who created or updated the test case is set as the reviewer.
 </ResponseField>
 
+<ResponseField name="User Score" type="Integer" optional>
+  User vote for the test case quality. Possible values are `1` (upvote), `-1` (downvote), or `0` (unreviewed).
+</ResponseField>
+
+<ResponseField name="User Score Reason" type="Text" optional>
+  A justification for the user score, providing context on why a test case was downvoted (or upvoted).
+</ResponseField>
+
 ## Scenario-Based Test Case Properties
 
 The following properties apply specifically to test cases of type `SCENARIOS` used with the [Conversation Simulator](/concepts/conversation-simulator):
