--- a/sdk/api/test/create.mdx
+++ b/sdk/api/test/create.mdx
@@ -32,7 +32,7 @@ test = galtea.tests.create(
     type="RED_TEAMING",
     product_id="YOUR_PRODUCT_ID",
     variants=["Toxicity", "Misuse", "Data Leakage"],
-    strategies=["jailbreaking", "prompt_injection"],
+    strategies=["Roleplay", "Base64"],
     max_test_cases=50
 )
 ```
