--- a/sdk/api/simulator/simulate.mdx
+++ b/sdk/api/simulator/simulate.mdx
@@ -63,4 +63,7 @@ for message in result.messages:
 
 <ResponseField name="agent_goes_first" type="bool">
   If True, the agent will generate the first message before any user messages are generated. Default: False
+  <Note>
+    When `agent_goes_first` is set to `True`, the first call to your agent will have an empty `messages` list in the `AgentInput`. Ensure your agent's `call` method can handle cases where `input_data.last_user_message_str()` returns `None`.
+  </Note>
 </ResponseField>
