--- a/concepts/product/test/case.mdx
+++ b/concepts/product/test/case.mdx
@@ -67,6 +67,14 @@ The Galtea SDK allows you to create, view, and manage test cases programmaticall
   A justification for the user score, providing context on why a test case was downvoted (or upvoted).
 </ResponseField>
 
+<ResponseField name="Confidence" type="Float" optional>
+  The confidence level of the test case.
+</ResponseField>
+
+<ResponseField name="Confidence Reason" type="Text" optional>
+  A justification for the confidence level of the test case.
+</ResponseField>
+
 ## Scenario-Based Test Case Properties
 
 The following properties apply specifically to test cases of type `SCENARIOS` used with the [Conversation Simulator](/concepts/conversation-simulator):
