Standardizes sort parameter name
Renames the `sortByCreatedAt` parameter to `sort_by_created_at` for consistency across all list API endpoints.

--- a/sdk/api/evaluation/list.mdx
+++ b/sdk/api/evaluation/list.mdx
@@ -29,10 +29,10 @@ session_evaluations = galtea.evaluations.list(session_id="YOUR_SESSION_ID")
 <ResponseField name="metric_id" type="str | list[str]" default="None">
   The ID or IDs of the metric(s) for which you want to list evaluations.
 </ResponseField>
-<ResponseField name="sortByCreatedAt" type="string" optional>
+<ResponseField name="sort_by_created_at" type="string" optional>
   Sort evaluations by creation date. Valid values are "asc" and "desc".
 </ResponseField>
-<ResponseField name="sortByScore" type="string" optional>
+<ResponseField name="sort_by_score" type="string" optional>
   Sort evaluations by score. Valid values are "asc" and "desc".
 </ResponseField>
 <ResponseField name="offset" type="int" optional>
