--- a/sdk/api/inference-result/list.mdx
+++ b/sdk/api/inference-result/list.mdx
@@ -15,7 +15,7 @@ inference_results = galtea.inference_results.list(session_id="YOUR_SESSION_ID")
 <ResponseField name="session_id" type="string | list[string]" required>
   The ID or IDs of the session(s) to get inference results for.
 </ResponseField>
-<ResponseField name="sortByCreatedAt" type="string" optional>
+<ResponseField name="sort_by_created_at" type="string" optional>
   Sort inference results by creation date. Valid values are "asc" and "desc".
 </ResponseField>
 <ResponseField name="offset" type="int" optional>
