--- a/sdk/api/metric/list.mdx
+++ b/sdk/api/metric/list.mdx
@@ -12,7 +12,7 @@ metrics = galtea.metrics.list()
 ```
 
 ## Parameters
-<ResponseField name="sortByCreatedAt" type="string" optional>
+<ResponseField name="sort_by_created_at" type="string" optional>
   Sort metrics by creation date. Valid values are "asc" and "desc".
 </ResponseField>
 <ResponseField name="offset" type="int">
