--- a/sdk/api/session/list.mdx
+++ b/sdk/api/session/list.mdx
@@ -25,7 +25,7 @@ sessions = galtea.sessions.list(version_id="YOUR_VERSION_ID")
 <ResponseField name="test_id" type="string | list[string]" optional>
   The ID or IDs of the test(s) to filter sessions by.
 </ResponseField>
-<ResponseField name="sortByCreatedAt" type="string" optional>
+<ResponseField name="sort_by_created_at" type="string" optional>
   Sort sessions by creation date. Valid values are "asc" and "desc".
 </ResponseField>
 <Note>
