--- a/sdk/api/test-case/list.mdx
+++ b/sdk/api/test-case/list.mdx
@@ -36,7 +36,7 @@ paginated_test_cases = galtea.test_cases.list(test_id="YOUR_TEST_ID", offset=10,
 <ResponseField name="user_score" type="int" optional>
   Filter by user score (0 for unreviewed, 1 for good quality, -1 for bad quality).
 </ResponseField>
-<ResponseField name="sortByCreatedAt" type="string" optional>
+<ResponseField name="sort_by_created_at" type="string" optional>
   Sort test cases by creation date. Valid values are "asc" and "desc".
 </ResponseField>
 <ResponseField name="offset" type="int" optional>
