--- a/sdk/api/version/list.mdx
+++ b/sdk/api/version/list.mdx
@@ -15,7 +15,7 @@ versions = galtea.versions.list(product_id="YOUR_PRODUCT_ID")
 <ResponseField name="product_id" type="string | list[string]" required>
   The ID or IDs of the product(s) for which you want to list versions.
 </ResponseField>
-<ResponseField name="sortByCreatedAt" type="string" optional>
+<ResponseField name="sort_by_created_at" type="string" optional>
   Sort versions by creation date. Valid values are "asc" and "desc".
 </ResponseField>
 <ResponseField name="offset" type="int">
