--- a/sdk/usage.mdx
+++ b/sdk/usage.mdx
@@ -143,7 +143,7 @@ Once the [evaluations](/concepts/product/version/session/evaluation) are complet
 
 ```python
 # First, get all sessions for the version
-sessions = galtea.sessions.list(version_id=version.id, sortByCreatedAt="desc")
+sessions = galtea.sessions.list(version_id=version.id, sort_by_created_at="desc")
 
 # Iterate through all product sessions
 for session in sessions:
