--- a/sdk/api/product/list.mdx
+++ b/sdk/api/product/list.mdx
@@ -12,7 +12,7 @@ products = galtea.products.list()
 ```
 
 ## Parameters
-<ResponseField name="sortByCreatedAt" type="string" optional>
+<ResponseField name="sort_by_created_at" type="string" optional>
   Sort products by creation date. Valid values are "asc" and "desc".
 </ResponseField>
 <ResponseField name="offset" type="int">
